styling to fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,22 @@
 
 
 body{
+  min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
   
   background-color: rgb(58, 67, 57);
   color: rgb(215, 215, 198);
 }
 
 #app {
-  min-height: 100vh;
-  margin: 0 0 15% 0;
-
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
